* [nt]roff: It is not a fatal error if the file specified with ".so" is not
  accessible in groff compatibility mode.
* [nt]roff: The value of the "\n(.k" register is computed differently in
  groff compability mode now.
* [nt]roff: The -mg macros now provide the fonts "C" and "CR".
* [nt]roff: The -mg macros now provide an emulation of the ".mso" request.
* [nt]roff: The ".rd" request now works again; it caused a segmentation
  fault since several releases.
* [nt]roff: Formatting of a ".char" object immediately before a trap is
  executed no longer causes pending input text to disappear (bug reported
  by Sebastian Leusch).
* troff: The escape sequence form "\s[+-]'n'" now works with fractional
  point sizes.
* troff: With xflag 0, fractional parts and units are now ignored with
  the ".ps" command.
* [nt]roff: With xflag 0, ".if !..." works correctly again.
* [nt]roff: When copying text to a macro, if a line appeared that was a
  prefix of the terminating macro, its last character was copied twice
  (e.g. "..." with the standard ".." was copied as "...."). This has been
  fixed.
* -me macros: The macros now work with xflag > 0.
* [nt]roff: The distance to the next trap, and, accordingly, the "\n(.t"
  register, can now be larger than the maximum allowed motion with "\h"
  and "\v". This allows very long pages without a "trap botch" error,
  although vertical motions on such pages may require multiple "\v"
  commands.
* [nt]roff: The "\n(.S" predefined number register has been removed again
  since it conflicts with use of this name by "dot -Tpic". (The "\n[.tabs]"
  register continues to be available with the same semantics.)
* troff: There is now a "lc_ctype" keyword in the DESC file for the sake
  of legacy post-processors that do not understand "x X LC_CTYPE".
* dpost: Use the device given by "x T" in intermediate language for reading
  font files only if its name starts with "ps" or if it has the "afmfonts"
  keyword in its DESC file; otherwise use "devpost".